Added the inventory service call from order service.